Added updates from class notes

--- a/finalProject/finalProject.tex
+++ b/finalProject/finalProject.tex
@@ -26,10 +26,18 @@
 	
 	\begin{equation}\label{parallelInSeries2}
 	\begin{split}
-	P&=F_y v_y\\
+	&y(x,t) = Acos(kx-\omega t)\\
+	&P=F_y v_y\\
 	&=-F \frac{\partial y(x,t)}{\partial x} \frac{\partial y(x,t)}{\partial t}\\
-	&=-F [-A k sin(kx - \omega t)] [+A \omega sin(kx - \omega t)]\\
-	P=Fk \omega A^2 sin^2(kx- \omega t)
+	&=-F [-A k sin(kx - \omega t)] [+A \omega sin{kx - \omega t}]\\
+	&P=Fk \omega A^2 sin^2(kx- \omega t)\\
+	&P= \sqrt{\mu F} \omega^2 A^2 sin^2{kx-\omega t}\\
+	&\omega = vk\\
+	&v=\sqrt{\frac{F}{\mu}}\\
+	&\int sin^2(\theta) d \theta = \frac{1}{2} \\
+	&P_{avg} = \frac{1}{2} \sqrt{\mu F} \omega^2 A^2 \\
+	&	\lambda \qquad (v \frac{2 \pi}{\lambda}) A^2\\
+	&	\lambda_2
 	\end{split}
 	\end{equation}
 	
